[package]
name = "rampage"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "mit"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]

[dependencies.bevy]
version = "0.5"
default-features = false
features = [
    "bevy_gilrs",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "x11",
    "wayland",
    "serialize",
]

[dependencies]
anyhow = "1"
backtrace = "0.3"
bevy_input_actionmap = { path = "crates/bevy_input_actionmap" }
bevy_openal = { path = "crates/bevy_openal" }
bevy_tts = { path = "crates/bevy_tts" }
big-brain = "0.3"
coord_2d = "0.3"
crossbeam-channel = "0.5"
derive_more = "0.99"
mapgen = "0.4"
maze_generator = "1"
pathfinding = "2"
rand = "0.8"
shadowcast = "0.8"

[profile.dev.package."*"]
opt-level = 3