[package]
name = "rampage"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "mit"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = ["bevy/trace"]
trace_chrome = ["bevy/trace_chrome"]

[dependencies.bevy]
version = "0.5"
default-features = false
features = [
    "bevy_gilrs",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "png",
    "x11",
    "wayland",
    "serialize",
]

[dependencies]
big-brain = "0.5"
blackout = { path = "crates/blackout" }

[profile.dev.package."*"]
opt-level = 3