[package]
name = "blackout"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.5"
default-features = false
features = [
    "bevy_gilrs",
    "bevy_wgpu",
    "bevy_winit",
    "render",
    "x11",
    "wayland",
    "serialize",
]

[dependencies]
backtrace = "0.3"
bevy_input_actionmap = { path = "../bevy_input_actionmap" }
bevy_openal = { path = "../bevy_openal" }
bevy_tts = { path = "../bevy_tts" }
coord_2d = "0.3"
crossbeam-channel = "0.5"
derive_more = "0.99"
mapgen = "0.4"
maze_generator = "1"
pathfinding = "2"
rand = "0.8"
shadowcast = "0.8"
